# FEECa

./: .gitignore  .travis.yml  DoubleIssue.md  Makefile  README.md  TODO  TODO.md  feeca.cabal  index.html  old-read.md  prof.hs  site.hs  stack.yaml
_site/: index.html
_site/src/FEECa/: Bernstein.html  Polynomial.html
_site/src/FEECa/Internal/: MultiIndex.html  Point.html
_site/src/FEECa/Utility/: Combinatorics.html
bench/FEEC/: bench.hs  bench.sh
bench/FEECa/: bench.hs  bench.sh  plot.py  prof.hs
bench/fenics/: bench.py  fenics.stable  ilv-mbp-timings.csv  plot.py  timings_fenics.csv
bench/prof/: pbench-2.prof  pbench.prof  pprof.prof  ptest-2.prof  ptest-3.prof  ptest.prof
doc/: Bibliography.bib  Geometry.lhs  Macros.tex  Makefile  Polynomials.lhs  bib-sec.bib  fespaces.lhs  forms.lhs  geometry.lhs  internal.lhs  macros.tex  polynomials.lhs  rough.lhs  tech-report.bib  tech-report.lhs
pub/: fenics16.tex
pub/presentation/: feeca.md  index.html  pres.css
src/: Bernstein.hs  Combinatorics.hs  CombinatoricsTest.hs  Demo.hs  DiffForms.hs  DifferentialForm.hs  Discrete.hs  FiniteElemenSpaces.hs  FiniteElementSpace.hs  FiniteElementSpaces.hs  Form.hs  FormTest.hs  Forms.hs  FormsTest.hs  GramSchmidt.hs  LICENSE  Mask.hs  MultiIndex.hs  Point.hs  PolyN.hs  Polynomial.hs  PolynomialTest.hs  Polynomials.hs  PolynomialsTest.hs  Print.hs  Properties.hs  Quadrature.hs  QuadratureTest.hs  README.md  Simplex.hs  SimplexTest.hs  Spaces.hs  Test.hs  Utility.hs  Vector.hs  functional-feec.cabal  tt.hs
src/FEEC/: Bern.lhs  Bernss.lhs  Bernstein.hs  Bernstein.lhs  Berny.lhs  Demo.hs  DifferentialForm.hs  FailEgs.hs  FiniteElementSpace.hs  FiniteElementSpace.lhs  Mask.hs  Mask.lhs  Polynomial.hs  Polynomial.lhs  PolynomialDifferentialForm.lhs  PolynomialDifferentialForms.hs
src/FEEC/Internal/: Form.hs  MultiIndex.hs  MultiIndex.lhs  Point.hs  Point.lhs  Simplex.hs  Simplex.lhs  Spaces.hs  Vector.hs  Vector.lhs
src/FEEC/Utility/: Combinatorics.hs  Combinatorics.lhs  Discrete.hs  GramSchmidt.hs  Print.hs  Quadrature.hs  Utility.hs
src/FEECa/: Bernstein.html  Bernstein.lhs  Demo.hs  DifferentialForm.hs  FailEgs.hs  FiniteEST.hs  FiniteElementSpace.html  FiniteElementSpace.lhs  Mask.hs  Polynomial.html  Polynomial.lhs  PolynomialDifferentialForm.html  PolynomialDifferentialForm.lhs
src/FEECa/Internal/: Form.hs  Form.lhs  MultiIndex.html  MultiIndex.lhs  Point.html  Point.lhs  Simplex.html  Simplex.lhs  Spaces.hs  Vector.html  Vector.lhs
src/FEECa/Utility/: Combinatorics.html  Combinatorics.lhs  Discrete.hs  GramSchmidt.hs  Print.hs  Quadrature.hs  Utility.hs
test/: Bernstein.hs  Combinatorics.hs  TestDummy.hs
test/FEEC/: BernsteinTest.hs  FiniteElementTest.hs  PolynomialDifferentialFormTest.hs  PolynomialTest.hs  TestUtility.hs
test/FEEC/Internal/: FormTest.hs  MultiIndexTest.hs  PointTest.hs  SimplexTest.hs  VectorTest.hs
test/FEEC/Utility/: CombinatoricsTest.hs  CombinatoricsTest.lhs  QuadratureTest.hs  Test.hs
test/FEECa/: FiniteElementTest.hs  PolynomialDifferentialFormTest.hs
test/FEECa/Internal/: FormTest.hs  MultiIndexTest.hs  VectorTest.hs
test/FEECa/Utility/: CombinatoricsTest.lhs  GramSchmidtTest.lhs  Test.hs
tests/: TestBrief.hs  TestDummy.hs
tests/FEECa/: BernsteinTest.hs  FiniteElementTest.hs  PolynomialDifferentialFormTest.hs  PolynomialTest.hs
tests/FEECa/Internal/: FormTest.hs  MultiIndexTest.hs  SimplexTest.hs  VectorTest.hs
tests/FEECa/Utility/: CombinatoricsTest.lhs  QuadratureTest.hs  Test.hs
tests/Failing/: DFs.hs
tests/config/: pre-commit  pre-push
tests/logs/: 2016-12-20.txt  2017-01-02.txt  FailEgs.hs
web/: index.tex  site.hs
web/css/: default.css
web/macros/: macros.sty
web/templates/: default.html
