name:                feeca

version:             1.0.0.1

synopsis:            FEECa: Finite Element Exterior Calculus in Haskell
description:
      FEECa is a library implementing the mathematical framework that The theory
      of finite element exterior calculus (FEEC), developed by Arnold, Falk and
      Winther, provides for the discretization of partial differential equations
      (PDEs) that allows for a universal treatment of a large number of physical
      problems.
      FEECa implements the abstract, mathematical concepts of FEEC and provides
      a full-fledged basis form generated and framework for computations on
      differential forms. It handles polynomial differential forms in arbitrary
      dimensions and implements monomial as well as Bernstein bases for
      polynomials. The package provides functionality to compute bases of finite
      element spaces based on the geometric decomposition proposed by Arnold,
      Falk and Winther.

license:             BSD3
license-file:        LICENSE

author:              Irene Lobo Valbuena, Simon Pfreundschuh

maintainer:          lobo@chalmers.se, simonpf@student.chalmers.se

-- copyright:

category:            Math

build-type:          Simple

-- extra-source-files:

cabal-version:       >= 1.10
tested-with:         GHC == 8.0.2, GHC == 8.2.*, GHC == 8.4.*, GHC == 8.6.*

source-repository head
  type:     git
  location: https://github.com/Airini/FEECa.git
  branch:   master


flag online-doc
  description:      Enable generation of online documentation with Hakyll.
  default:          False

flag fast
  description:      A brief check on properties.
  manual:           False


library
  exposed-modules:    FEECa.Mask, FEECa.Polynomial, FEECa.Bernstein,
                      FEECa.DifferentialForm, FEECa.FiniteElementSpace,
                      FEECa.PolynomialDifferentialForm,

                      FEECa.Internal.Spaces, FEECa.Internal.Vector,
                      FEECa.Internal.Form, FEECa.Internal.Simplex,
                      FEECa.Internal.MultiIndex, FEECa.Utility.Print,
                      FEECa.Utility.Combinatorics

  other-modules:
                      FEECa.Internal.Point,
                      FEECa.Demo, Properties,
                      FEECa.Utility.Discrete,
                      FEECa.Utility.GramSchmidt, FEECa.Utility.Utility,
                      FEECa.Utility.Quadrature

  other-extensions:   GADTs, FlexibleInstances, TypeFamilies,
                      MultiParamTypeClasses, FlexibleContexts,
                      UnicodeSyntax, MonoLocalBinds

  build-depends:      base >= 4.6 && < 5, exact-combinatorics >= 0.2,
                      QuickCheck >= 2.7, random >= 1.0, hmatrix >= 0.17,
                      pretty >= 1.1.1
                      -- Benchmark dependencies (for Travis's sake)
                      -- criterion, timeit == 1.0.0.0, deepseq

  hs-source-dirs:     src, tests, bench

  ghc-options:        -O2 -fexcess-precision -optc-ffast-math -optc-O3 -optc-mfpmath=sse
    -Wall -Wredundant-constraints
    -Wdodgy-imports -Wunused-local-binds -Wunused-matches -Worphans
    -fpedantic-bottoms
    -funfolding-use-threshold=16
    -fwarn-tabs
    -fwarn-unused-imports
    -fwarn-missing-signatures
    -fwarn-name-shadowing
    -fwarn-incomplete-patterns

  default-language:   Haskell2010


test-suite test-feec
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests, src
  main-is:            TestDummy.hs
  ghc-options:        -O2 -threaded -fexcess-precision -optc-O3 -optc-ffast-math -optc-mfpmath=sse -funfolding-use-threshold=16 "-with-rtsopts=-N"
  ghc-prof-options:   -fprof-auto-exported "-with-rtsopts=-N -pa -s -hc -i0.1"
  build-depends:      base >= 4.6 && < 5, exact-combinatorics >= 0.2,
                      QuickCheck >= 2.7, random >= 1.0, hmatrix >= 0.16,
                      pretty >= 1.1.1, feeca, template-haskell
  other-modules:      FEECa.Bernstein, FEECa.BernsteinTest,
                      FEECa.DifferentialForm,
                      FEECa.FiniteElementSpace, FEECa.FiniteElementTest,
                      FEECa.Internal.Form, FEECa.Internal.FormTest,
                      FEECa.Internal.MultiIndex, FEECa.Internal.MultiIndexTest,
                      FEECa.Internal.Simplex, FEECa.Internal.SimplexTest,
                      FEECa.Internal.Spaces,
                      FEECa.Internal.Vector, FEECa.Internal.VectorTest,
                      FEECa.Polynomial, FEECa.PolynomialTest,
                      FEECa.PolynomialDifferentialForm, FEECa.PolynomialDifferentialFormTest,
                      FEECa.Utility.Combinatorics, FEECa.Utility.CombinatoricsTest,
                      FEECa.Utility.Discrete,
                      FEECa.Utility.GramSchmidt,
                      FEECa.Utility.Print,
                      FEECa.Utility.Quadrature, FEECa.Utility.QuadratureTest,
                      FEECa.Utility.Test,
                      FEECa.Utility.Utility,
                      Properties
  default-language:   Haskell2010

benchmark bench
  type:               exitcode-stdio-1.0
  main-is:            bench/FEECa/bench.hs
  ghc-options:        -O2 -threaded -fexcess-precision -optc-O3 -optc-ffast-math -optc-mfpmath=sse -funfolding-use-threshold=16 "-with-rtsopts=-N2"
  ghc-prof-options:   -fprof-auto-exported "-with-rtsopts=-N2 -pa -s -hc -i0.1"

  build-depends:      base >= 4.6 && < 5, feeca,
                      criterion, timeit == 1.0.0.0, deepseq
  default-language:   Haskell2010

executable prof
  main-is: prof.hs
  ghc-options:        -fprof-auto-exported -O2 -threaded -fexcess-precision -optc-O3 -optc-ffast-math -optc-mfpmath=sse -funfolding-use-threshold=16 "-with-rtsopts=-N -p -s -hc -i0.1"
  build-depends:      base >= 4.6 && < 5, feeca
  default-language:   Haskell2010

executable doc
  main-is: site.hs
  default-language: Haskell2010
  if flag (online-doc)
    if impl (ghc < 7.10.0)
      build-depends: base >= 4.7 && < 4.8, hakyll >= 4.7.5 && < 4.8
    else
      build-depends: base >= 4.8 && < 5, hakyll
    build-depends:   pandoc >= 2.0.5 && < 2.7, pandoc-citeproc >= 0.14 && < 0.17, blaze-html, process, containers, filepath
